# localproxy

./: .gitlab-ci.yml  Makefile  README.md  pyproject.toml
localproxy/: cli.py
tests/: test_proxy.py
