[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "localproxy"
version = "0.1.0"
description = "A local proxy management tool"
authors = ["Evens <rnansued@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
click = "*"
toml = "*"

[tool.poetry.scripts]
local_proxy = "localproxy.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "*"
